src/styles/main.css
html, body {
    margin: 0;
    padding: 0;
}

.root-container {
    box-sizing: content-box;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    height: 100vh;
}
.top-section {
    display: flex;
    align-items: center;
    height: 45px;
    border-bottom: 1px solid #eee;
}

.top-section > button {
    margin: 0 3px;
}
.top-section > div {
    margin: 0 10px;
}
.main-section {
    flex: 1;
    display: flex;
    flex-direction: row;
}

.navigator {
    width: 230px;
    min-width: 190px;
    background: #f8f9fa;
    border-right: 1px solid #eee;
    padding: 20px 4px;
    height: calc(100vh - 90px);
    overflow-y: auto;
}

.explorer {
    height: calc(100vh - 90px);
    width: 100%;
}

.breadcrumb-bar {
    height: 30px;
    flex: 1 1;
    padding: 3px;
    border: 1px solid #eee;
    white-space: nowrap; 
    overflow: hidden;
    text-overflow: ellipsis;
}
.breadcrumb-bar > * {
    padding: 0 5px;
}
.search-bar {
    width: 300px;
    height: 30px;
    display: inline-flex;
    align-items: center;
    margin-right: 10px;
    border: 1px solid #eee;
}

.search-bar > input {
    flex: 1;
    padding: 0 3px;
    border: none;
    height: 28px;
}
.search-bar i {
    margin: 0 10px;
}
.footer-section {
    display: inline-flex;
    height: 45px;
    align-items: center;
    padding: 0 10px;
    border-top: 1px solid #eee;
}


.spacer {
    flex: 1 1;
}

.thumbnail-view {
    display: flex;
    padding: 30px;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
}

.thumbnail-view > div {
    text-align: center;
    max-width: 90px;
    margin:2rem;
}
.thumbnail-view > div > i {
    display: block;
}

.thumbnail-view > div > span {
    display: block;
    margin-top: 5px;
}

.assist-filler {
    margin: 0 30px;
}

.assist-wrapper {
    height: 100%;
    position:relative;
}

.assist-wrapper > svg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.assist-wrapper > div.toolbar {
    position: absolute;
    display: flex;
    flex-direction: column;
    bottom: 0;
    left: 0;
    justify-content: space-between;
    padding: 5px;
    background-color: rgba(204, 204, 204, 0.3);
    z-index: 1000;
    margin: 3px;
    border-radius: 3px;
}

.assist-wrapper > .toolbar > * {
    margin: 2px;
}

.node text {
    font: 12px sans-serif;
 }
 .node.active text {
   font-weight: bold;
   font-size: 20px;
 }
 .node.active image {
     width: 18px;
     height: 18px;
 }
 .node--internal text {
   text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
 }

 .link {
   fill: none;
   stroke: #555;
   stroke-opacity: 0.4;
   stroke-width: 1.5px;
 }

 path.link-highlighted {
     fill: none;
     stroke: #d35400;
     stroke-opacity: 1;
     stroke-width: 2.5px;
 }

 g.node {
   cursor: pointer;
 }

 text {
   font-family: FontAwesome;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }


 /*  CARD CSS */

.modal-title {
    font-size: 1.6rem;
    margin-bottom: 10px;
    text-align: center;
}
 .modal-author {
     border-bottom: 1px solid #eee;
     padding: 5px 15px;
     color: #777;
     font-size: 13px;
 }

 .modal-extra {
     font-size: 1.1rem;
     display: flex;
     justify-content: space-between;
 }

 .modal-body {
     font-size: 1.1rem;
 }

